syntax = "proto3";

//package com.example.kafkaconsumerservice.grpc;

option java_multiple_files = true;
option java_package = "com.example.parking";
option java_outer_classname = "ParkingSessionProto";

package parking;

message ParkingSession {
  string parkingSpotNumber = 1;
  string startTime = 2;
  string endTime = 3;
  string carNumber = 4;
  int64 userId = 5;
  double price = 6;
  bool isPaid = 7;
}

message StreamRequest {
  string request = 1;
}

service ParkingSessionService {
  rpc streamParkingSessions (StreamRequest) returns (stream ParkingSession) {}
}
